Finalizando documentacao swagger
